# wgpu-integration-shader-widget

./: Cargo.toml  LICENSE
src/: main.rs  shader_pipeline.rs  shader_scene.rs  shader_widget.rs  triangle.wgsl
