[package]
name = "wgpu-integration-shader-widget"
version = "0.1.0"
authors = ["Gota Gando <gota@gando.dev>"]
edition = "2021"
publish = false

[dependencies]
iced_winit = "0.13"
iced_wgpu = "0.13.5"
iced_widget = { version = "0.13", features = ["wgpu"] }
iced_core = "0.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"

image = "0.24"
rand = "0.8.5"
pollster = "0.4.0"
bytemuck = { version = "1.0", features = ["derive"] }
glam = { version="0.25", features = ["bytemuck"] }